--- a/app/globals.css
+++ b/app/globals.css
@@ -16,6 +16,8 @@
     --primary: 6 100% 43%;
     --primary-foreground: 210 40% 98%;
 
+    --primary-1: 183 100% 27%;
+
     --secondary: 0 0% 84%;
     --secondary-foreground: 222.2 47.4% 11.2%;
 
